--- a/_docker/app/php.ini
+++ b/_docker/app/php.ini
@@ -2,5 +2,6 @@
 post_max_size = 20M
 upload_max_filesize = 30M
 max_input_time = 1000
+max_execution_time = 1000
 memory_limit=2G
 display_errors=on
