--- a/_docker/app/DockerFile
+++ b/_docker/app/DockerFile
@@ -27,6 +27,11 @@ RUN docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/i
 # Install PHP extensions
 RUN docker-php-ext-install mysqli pdo_mysql mbstring exif pcntl bcmath gd sockets iconv
 
+# XDebug
+COPY ./_docker/app/xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
+RUN pecl install xdebug \
+    && docker-php-ext-enable xdebug
+
 # Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
