--- a/_docker/app/xdebug.ini
+++ b/_docker/app/xdebug.ini
@@ -1,10 +1,7 @@
 [xdebug]
 xdebug.mode = debug,profile,trace
-# IP хоста смотрим через ifconfig (docker0)
+# IP хоста смотрим через ifconfig
 xdebug.client_host = 172.17.0.1
-
-xdebug.auto_trace=1
-xdebug.trace_format=1
 
 # Trigger
 xdebug.start_with_request = "trigger"
